[package]
name = "jhttp"
version = "0.1.0"
edition = "2024"

[dependencies]
unicode-width = "0.1.10"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
regex = "1"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
futures = "0.3"